# pixiretro

./: .gitignore  CMakeLists.txt  README.md  app.h  bmpimage.cpp  bmpimage.h  collision.cpp  collision.h  color.h  conanfile.py  cutscene.cpp  cutscene.h  debug_win64  engine.cpp  engine.h  enginerc  example  example.cpp  filerc.cpp  filerc.h  gfx.cpp  gfx.h  gfx2.cpp  gfx2.h  glxinfo.txt  input.cpp  input.h  log  log.cpp  log.h  makefile  math.h  meson.build  nomad.cpp  nomad.h  output  output.txt  particles.h  release.profile  sfx.cpp  (+12 more)
.github/workflows/: build.yml
Image/: logo.xcf
assets/cutscenes/: intro.scene
assets/fonts/: dogica8.fn  dogica8.font
assets/rc/: enginerc
assets/sprites/: blue_double_ladder.sprite  blue_single_ladder.sprite  crab.sp  kong_climb_pauline.sprite  oil_barrel.sprite  oil_flames.sprite  pixiretro_splash.sprite  pixiretro_splash.xcf  red_girder_bottom_flat.sprite  red_girder_bottom_slope.sprite  red_girder_long_flat.sprite  red_girder_long_left_slope.sprite  red_girder_short.sprite  red_girder_top_slope.sprite  squid.sp  squid.ss
assets/spritesheets/: pixiretro_splash.spritesheet
docs/: credits  todo
include/: bmpimage.h  collision.h  color.h  engine.h  font.h  gfx.h  pxr_app.h  pxr_bmp.h  pxr_collision.h  pxr_color.h  pxr_engine.h  pxr_game.h  pxr_gfx.h  pxr_hud.h  pxr_input.h  pxr_log.h  pxr_mathutil.h  pxr_particle.h  pxr_rand.h  pxr_rc.h  pxr_rect.h  pxr_sfx.h  pxr_vec.h  pxr_wav.h  pxr_xml.h  ui.h  wavesound.h  xmlutil.h
source/: cutscene.cpp  filerc.cpp  gfx.cpp  input.cpp  pxr_bmp.cpp  pxr_collision.cpp  pxr_engine.cpp  pxr_gfx.cpp  pxr_hud.cpp  pxr_input.cpp  pxr_log.cpp  pxr_particle.cpp  pxr_rand.cpp  pxr_rc.cpp  pxr_sfx.cpp  pxr_wav.cpp  pxr_xml.cpp  xmlutil.cpp
src/: pxr_bmp.cpp  pxr_collision.cpp  pxr_engine.cpp  pxr_gfx.cpp  pxr_hud.cpp  pxr_input.cpp  pxr_rand.cpp  pxr_sfx.cpp  pxr_wav.cpp  pxr_xml.cpp
